--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Dit is een header</h1>
+        <h1>Dit een header</h1>
         <p>hallo</p>
         <p>dit is een aanpassing</p>
     </body>
